--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,9 @@
                 android:resource="@xml/appwidgetprovider"/>
         </receiver>
 
+        <service android:name=".widget.WidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+        <!--
         <receiver android:name=".widget.MyWidgetIntentReceiver"
             android:label="@string/app_name">
             <intent-filter>
@@ -74,8 +77,7 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/appwidgetprovider"/>
         </receiver>
-
-
+        -->
 
     </application>
 
