--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,12 +51,17 @@
         <provider
             android:name=".myprovider.TaskProvider"
             android:authorities="com.todo.thomas.scrolltask.myprovider"
+            android:exported="true"
             android:multiprocess="false" >
         </provider>
 
         <receiver android:name=".widget.MyWidgetProvider">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+            </intent-filter>
+
+            <intent-filter>
+                <action android:name="com.toddo.thomas.intent.action.SYNC_BUTTON_CLICK"/>
             </intent-filter>
 
             <meta-data
@@ -66,18 +71,7 @@
 
         <service android:name=".widget.WidgetService"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
-        <!--
-        <receiver android:name=".widget.MyWidgetIntentReceiver"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="com.toddo.thomas.intent.action.UPDATE_WIDGET"/>
-            </intent-filter>
 
-            <meta-data
-                android:name="android.appwidget.provider"
-                android:resource="@xml/appwidgetprovider"/>
-        </receiver>
-        -->
 
     </application>
 
