--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,10 @@ buildscript {
     ext.kotlin_version = '1.1.2-4'
     repositories {
         jcenter()
-        google()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-rc1'
+        classpath 'com.android.tools.build:gradle:2.3.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -18,7 +18,6 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        google()
         maven {
             url "https://maven.google.com"
         }
