--- a/authservice/build.gradle
+++ b/authservice/build.gradle
@@ -1,11 +1,11 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
+
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
 
 
     defaultConfig {
-        applicationId "com.example.shortwriting"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
@@ -22,25 +22,14 @@ android {
         }
     }
 
-    defaultConfig {
-        multiDexEnabled true
-    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile "com.google.guava:guava:18.0"
 
-    //try room
-    compile "android.arch.persistence.room:runtime:1.0.0-alpha3"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha3"
-
-    compile project(":authservice")
 }
