--- a/shortwriting/build.gradle
+++ b/shortwriting/build.gradle
@@ -38,9 +38,6 @@ dependencies {
     })
     compile "com.google.guava:guava:18.0"
 
-    //try room
-    compile "android.arch.persistence.room:runtime:1.0.0-alpha3"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha3"
-
     compile project(":authservice")
+    compile project(":persistence")
 }
